FIX: icon not showing on homepage

--- a/components/home/service/style.module.scss
+++ b/components/home/service/style.module.scss
@@ -65,19 +65,11 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.25rem;
-
-    @include mobile-tablet-p {
-      display: none;
-    }
   }
   
 
   .mobileCards {
     padding-left: 1.25rem;
-
-    @include desktop {
-      display: none;
-    }
   }
 
   .sliderArrow {
